[gd_scene load_steps=5 format=2]

[ext_resource path="res://actors/Truck.gd" type="Script" id=1]
[ext_resource path="res://animation/explosion.tres" type="SpriteFrames" id=2]
[ext_resource path="res://assets/textures/truck.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 6.5

[node name="Truck" type="KinematicBody2D" groups=["trucks"]]
collision_layer = 32
collision_mask = 247
input_pickable = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Explosion" type="AnimatedSprite" parent="."]
visible = false
frames = ExtResource( 2 )

[node name="StuckTimer" type="Timer" parent="."]
autostart = true

[node name="HealthBar" type="ColorRect" parent="."]
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = -7.0
color = Color( 0, 0, 0, 1 )

[connection signal="input_event" from="." to="." method="_on_Truck_input_event"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
[connection signal="timeout" from="StuckTimer" to="." method="_on_StuckTimer_timeout"]
